Global MAVEN_OPTS for --enable-preview